--- a/src/default.css
+++ b/src/default.css
@@ -94,24 +94,24 @@ table {
 
 @font-face {
     font-family: 'Vegur';
-    src: url('fonts/vegur-light.eot');
-    src: url('fonts/vegur-light.eot?#iefix') format('embedded-opentype'),
-         url('fonts/vegur-light.woff') format('woff'),
-         url('fonts/vegur-light.ttf') format('truetype'),
-         url('fonts/vegur-light.otf') format('opentype'),
-         url('fonts/vegur-light.svg#VegurLight') format('svg');
+    src: url('/fonts/vegur-light.eot');
+    src: url('/fonts/vegur-light.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/vegur-light.woff') format('woff'),
+         url('/fonts/vegur-light.ttf') format('truetype'),
+         url('/fonts/vegur-light.otf') format('opentype'),
+         url('/fonts/vegur-light.svg#VegurLight') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Vegur';
-    src: url('fonts/vegur-bold.eot');
-    src: url('fonts/vegur-bold.eot?#iefix') format('embedded-opentype'),
-         url('fonts/vegur-bold.woff') format('woff'),
-         url('fonts/vegur-bold.ttf') format('truetype'),
-         url('fonts/vegur-bold.otf') format('opentype'),
-         url('fonts/vegur-bold.svg#VegurBold') format('svg');
+    src: url('/fonts/vegur-bold.eot');
+    src: url('/fonts/vegur-bold.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/vegur-bold.woff') format('woff'),
+         url('/fonts/vegur-bold.ttf') format('truetype'),
+         url('/fonts/vegur-bold.otf') format('opentype'),
+         url('/fonts/vegur-bold.svg#VegurBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
